sidux-art-xfce (1.3) UNRELEASED; urgency=low

  * Do not install customized xfce4-panel configuration file, it is in
    conflict with the xfce4-panel package.

 -- Kel Modderman <kel@otaku42.de>  Thu, 04 Sep 2008 08:29:25 +1000

sidux-art-xfce (1.2) unstable; urgency=low

  * Provide sidux-settings-xfce with global configuration files for the Xfce
    desktop.

 -- Kel Modderman <kel@otaku42.de>  Thu, 04 Sep 2008 07:42:28 +1000

sidux-art-xfce (1.1) unstable; urgency=low

  * remove no longer required conflicts
  * depend on real package before virtual 

 -- Bernard Gray <bernard.gray@gmail.com>  Wed, 27 Aug 2008 08:37:08 +1000

sidux-art-xfce (1.0) unstable; urgency=low

  * Initial Release.

 -- Bernard Gray <bernard.gray@gmail.com>  Sun, 24 Aug 2008 18:31:38 +1000