@@ -2,8 +2,9 @@ sidux-art-xfce (1.3) UNRELEASED; urgency=low
 
   * Do not install customized xfce4-panel configuration file, it is in
     conflict with the xfce4-panel package.
+  * Instead, install the panel configuration to /usr/share/.
 
- -- Kel Modderman <kel@otaku42.de>  Thu, 04 Sep 2008 08:29:25 +1000
+ -- Kel Modderman <kel@otaku42.de>  Thu, 04 Sep 2008 09:32:18 +1000
 
 sidux-art-xfce (1.2) unstable; urgency=low
 
